...
            android:layout_alignParentTop = "true"
            android:singleLine="true"
        />


    <AutoCompleteTextView
        android:id="@+id/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:hint="@string/prompt_room_name"
        android:gravity="center_horizontal"
        android:inputType="textShortMessage"
        android:layout_marginTop="22dp"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/join_button"
        style="?android:textAppearanceSmall"
        android:textColor="#435190"

        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
