...
            android:id="@+id/Msglabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Message" />

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="2"
            android:maxLines="10"
            android:inputType="textMultiLine|textLongMessage"
...
